--- a/src/components/Thread/Thread.module.scss
+++ b/src/components/Thread/Thread.module.scss
@@ -1,9 +1,11 @@
+@use "../../styles/variables.scss";
+
 .threadContainer {
   position: relative;
   width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
   height: inherit;
   padding: 60px 0;
@@ -13,79 +15,42 @@
   position: absolute;
   background: white;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-  color: black;
-  padding: 15px;
+  padding: 15px 20px;
   display: flex;
-  align-items: center;
   border-radius: 5px;
   width: inherit;
   box-sizing: border-box;
   min-height: 90px;
+  margin-bottom: 20px;
 }
 
-.expand {
+@media (max-width: 400px) {
+  .threadContent {
+    width: 90%;
+  }
+  .threadContainer {
+    margin-bottom: 30px;
+  }
+}
+
+.expandable {
   :hover {
     cursor: pointer;
   }
 }
 
-.threadContent.lol {
-  position: unset;
+.leftSection {
+  @include variables.content(70%, left);
 }
 
-.threadContent:hover {
-  z-index: 100; // Bring to front on hover
+.rightSection {
+  @include variables.content(30%, right);
 }
-
-// TODO rename and refactor
-.hmmFirst {
-  flex-basis: 70%;
-  text-align: left;
-}
-
-.hmmSec {
-  flex-basis: 30%;
-  text-align: right;
-}
-
-// TODO rename and refactor
-$lowRate: #e89d40;
-$highRate: #9335ff;
-$highRateMsg: #27aae1;
 
 .lowRate {
-  color: $lowRate;
+  color: variables.$lowRate;
 }
 
 .highRate {
-  color: $highRate;
-}
-
-.lowRateMsg {
-  color: white;
-  background-color: $lowRate;
-  border-radius: 5px;
-  padding: 2px;
-}
-
-.highRateMsg {
-  color: white;
-  background-color: $highRateMsg;
-  border-radius: 5px;
-  padding: 2px;
-}
-
-.messages {
-  position: absolute;
-  right: 5%; // Using percentage instead of 'left: 80%' for better control
-  top: -10px;
-  padding: 0 25px;
-}
-
-.paddingContainerExpand {
-  padding: 0;
-}
-
-.marginExpand {
-  margin-bottom: 20px;
+  color: variables.$highRate;
 }
