--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@use "src/styles/variables.scss";
+
 body,
 html {
   height: 100%;
@@ -7,13 +9,13 @@ html {
 }
 
 body {
-  background-color: #f2f2f2;
-  color: #f2f2f2;
+  background-color: variables.$backgroundColor;
+  color: variables.$textColor;
   font-family: "Comfortaa", sans-serif;
   font-size: smaller;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 321px) {
   body {
     overflow-x: auto; /* set the scrollbar */
   }
