--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow-x: hidden; // makes the threads go out of the screen instead of scaling down
 }
 
 body {
