--- a/src/components/Thread/Thread.module.scss
+++ b/src/components/Thread/Thread.module.scss
@@ -7,29 +7,32 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  height: inherit;
-  padding: 60px 0;
+  min-height: 120px;
+  margin: 1rem 0;
 }
 
 .threadContent {
   position: absolute;
   background: white;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 15px 20px;
+  padding: 15px;
   display: flex;
   border-radius: 5px;
-  width: inherit;
+  width: 90%;
   box-sizing: border-box;
   min-height: 90px;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
 }
 
-@media (max-width: 400px) {
+@media (min-width: 400px) {
   .threadContent {
-    width: 90%;
+    width: inherit;
   }
+}
+
+@media (min-width: 568px) {
   .threadContainer {
-    margin-bottom: 30px;
+    margin: 0.5rem;
   }
 }
 
@@ -41,6 +44,14 @@
 
 .leftSection {
   @include variables.content(70%, left);
+
+  div:first-child {
+    font-weight: bold;
+  }
+
+  div:last-child {
+    padding-top: 0.5rem;
+  }
 }
 
 .rightSection {
